work on group conv